fixed user rego
